# llm-knowledge-extractor

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
docker/web/: Dockerfile.web  entrypoint.sh
src/llm_knowledge_extractor/: main.py
src/llm_knowledge_extractor/api/dependencies/: auth.py  storage.py
src/llm_knowledge_extractor/api/dependencies/services/: script_generator_service.py
src/llm_knowledge_extractor/api/v1/: router.py
src/llm_knowledge_extractor/common/db/: base.py  session.py
src/llm_knowledge_extractor/common/security/: __init__.py  encryption_service.py
src/llm_knowledge_extractor/common/utils/: database_table_init.py  get_logger.py
src/llm_knowledge_extractor/core/: config.py
src/llm_knowledge_extractor/features/text_analyzer/api/v1/: text_analyzer_api.py
src/llm_knowledge_extractor/features/text_analyzer/daos/: text_analyzer_dao.py
src/llm_knowledge_extractor/features/text_analyzer/models/: __init__.py  text_analyzer.py
src/llm_knowledge_extractor/features/text_analyzer/prompts/: text_analysis_prompt.py
src/llm_knowledge_extractor/features/text_analyzer/schemas/: text_analyzer_schema.py
src/llm_knowledge_extractor/features/text_analyzer/services/: analysis_service.py
src/llm_knowledge_extractor/features/text_analyzer/tests/: conftest.py
src/llm_knowledge_extractor/features/text_analyzer/utils/: noun_extractor.py
src/llm_knowledge_extractor/llm_clients/azure/: azure_llm_client.py
terraform/: main.tf  terraform.tfvars
(+1 files in other folders)
